# telepharma

./: .gitignore  Cargo.toml  Makefile  Readme.md
.cargo/: config.toml
locales/: en.yml
migrations/: 20241017191333_create_tables.sql
src/: main.rs  seed.rs
src/db/: mod.rs  models.rs
src/handlers/: inventory.rs  order.rs
src/services/: mod.rs
src/utils/: mod.rs
