[package]
name = "telepharma"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
envconfig = "0.11.0"
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
uuid = { version = "1.11.0", features = ["v4"] }
