[package]
name = "telepharma"
version = "0.1.0"
edition = "2021"
default-run = "telepharma"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
envconfig = "0.11.0"
futures = "0.3.31"
log = "0.4.22"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
rust-i18n = "3.1.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
sqlx = { version = "0.8.2", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }
teloxide = { version = "0.13.0", features = ["macros"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
uuid = { version = "1.11.0", features = ["v4"] }
